Add new classes and styles to the heading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Crash Course</title>
+    <style>
+        .changeBG {
+            background-color: #d46161;
+        }
+
+        .changeFT {
+            font-style: italic;
+            font-size: 40px;
+        }
+    </style>
 </head>
 <body>
     <h1 id="heading">Hi there</h1>
