Add a new class with new styles to the heading

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>DOM Crash Course</title>
     <style>
         .changeBG {
-            background-color: #d46161;
+            background-color: #531010;
         }
 
         .changeFT {
             font-style: italic;
             font-size: 40px;
+        }
+
+        .changeCL {
+            color: white;
         }
     </style>
 </head>
