--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Crash Course</title>
     <style>
-        .changeBG {
+        /* .changeBG {
             background-color: #531010;
         }
 
@@ -17,16 +17,18 @@
 
         .changeCL {
             color: white;
-        }
+        } */
     </style>
 </head>
 <body>
-    <h1 id="heading">Hi there</h1>
-    <ul id="list">
+    <h1 class="heading">Hi there</h1>
+
+    <button class="btn">Click here</button>
+    <!-- <ul id="list">
         <li>Home</li>
         <li>About</li>
         <li>content</li>
-    </ul>
+    </ul> -->
     <script src="script.js"></script>
 </body>
 </html>
