Event listeners in javascript

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <h1 class="heading">Hi there</h1>
 
-    <button class="btn" onclick="clickButton()">Click here</button>
+    <button class="btn">Click here</button>
     <!-- <ul id="list">
         <li>Home</li>
         <li>About</li>
